--- a/components/camel-aws/camel-aws2-ec2/src/main/docs/aws2-ec2-component.adoc
+++ b/components/camel-aws/camel-aws2-ec2/src/main/docs/aws2-ec2-component.adoc
@@ -1,5 +1,5 @@
 = AWS Elastic Compute Cloud (EC2) Component
-:doctitle: AWS Elastic Compute Cloud (EC2)
+:doctitle: Elastic Compute Cloud (EC2)
 :shortname: aws2-ec2
 :artifactid: camel-aws2-ec2
 :description: Manage AWS EC2 instances.
@@ -72,7 +72,7 @@ The order of evaluation for Default Credentials Provider is the following:
  - Web Identity Token from AWS STS.
  - The shared credentials and config files.
  - Amazon ECS container credentials - loaded from the Amazon ECS if the environment variable `AWS_CONTAINER_CREDENTIALS_RELATIVE_URI` is set.
- - Amazon EC2 Instance profile credentials. 
+ - Amazon EC2 Instance profile credentials.
 
 You have also the possibility of using Profile Credentials Provider, by specifying the useProfileCredentialsProvider option to true and profileCredentialsName to the profile name.
 
