--- a/components/camel-aws/camel-aws-cloudtrail/src/main/docs/aws-cloudtrail-component.adoc
+++ b/components/camel-aws/camel-aws-cloudtrail/src/main/docs/aws-cloudtrail-component.adoc
@@ -1,5 +1,5 @@
 = AWS Cloudtrail Component
-:doctitle: AWS Cloudtrail
+:doctitle: Cloudtrail
 :shortname: aws-cloudtrail
 :artifactid: camel-aws-cloudtrail
 :description: Consume events from Amazon Cloudtrail using AWS SDK version 2.x.
