--- a/components/camel-aws/camel-aws-secrets-manager/src/main/docs/aws-secrets-manager-component.adoc
+++ b/components/camel-aws/camel-aws-secrets-manager/src/main/docs/aws-secrets-manager-component.adoc
@@ -1,5 +1,5 @@
 = AWS Secrets Manager Component
-:doctitle: AWS Secrets Manager
+:doctitle: Secrets Manager
 :shortname: aws-secrets-manager
 :artifactid: camel-aws-secrets-manager
 :description: Manage secrets using AWS Secrets Manager.
