--- a/components/camel-aws/camel-aws2-ddb/src/main/docs/aws2-ddbstream-component.adoc
+++ b/components/camel-aws/camel-aws2-ddb/src/main/docs/aws2-ddbstream-component.adoc
@@ -1,5 +1,5 @@
 = AWS DynamoDB Streams Component
-:doctitle: AWS DynamoDB Streams
+:doctitle: DynamoDB Streams
 :shortname: aws2-ddbstream
 :artifactid: camel-aws2-ddb
 :description: Receive messages from AWS DynamoDB Stream.
@@ -78,8 +78,8 @@ The order of evaluation for Default Credentials Provider is the following:
  - Web Identity Token from AWS STS.
  - The shared credentials and config files.
  - Amazon ECS container credentials - loaded from the Amazon ECS if the environment variable AWS_CONTAINER_CREDENTIALS_RELATIVE_URI is set.
- - Amazon EC2 Instance profile credentials. 
- 
+ - Amazon EC2 Instance profile credentials.
+
 You have also the possibility of using Profile Credentials Provider, by specifying the useProfileCredentialsProvider option to true and profileCredentialsName to the profile name.
 
 Only one of static, default and profile credentials could be used at the same time.
