--- a/components/camel-aws/camel-aws2-eks/src/main/docs/aws2-eks-component.adoc
+++ b/components/camel-aws/camel-aws2-eks/src/main/docs/aws2-eks-component.adoc
@@ -1,5 +1,5 @@
 = AWS Elastic Kubernetes Service (EKS) Component
-:doctitle: AWS Elastic Kubernetes Service (EKS)
+:doctitle: Elastic Kubernetes Service (EKS)
 :shortname: aws2-eks
 :artifactid: camel-aws2-eks
 :description: Manage AWS EKS cluster instances.
@@ -73,7 +73,7 @@ The order of evaluation for Default Credentials Provider is the following:
  - Web Identity Token from AWS STS.
  - The shared credentials and config files.
  - Amazon ECS container credentials - loaded from the Amazon ECS if the environment variable `AWS_CONTAINER_CREDENTIALS_RELATIVE_URI` is set.
- - Amazon EC2 Instance profile credentials. 
+ - Amazon EC2 Instance profile credentials.
 
 You have also the possibility of using Profile Credentials Provider, by specifying the useProfileCredentialsProvider option to true and profileCredentialsName to the profile name.
 
