--- a/components/camel-aws/camel-aws2-iam/src/main/docs/aws2-iam-component.adoc
+++ b/components/camel-aws/camel-aws2-iam/src/main/docs/aws2-iam-component.adoc
@@ -1,5 +1,5 @@
 = AWS Identity and Access Management (IAM) Component
-:doctitle: AWS Identity and Access Management (IAM)
+:doctitle: Identity and Access Management (IAM)
 :shortname: aws2-iam
 :artifactid: camel-aws2-iam
 :description: Manage AWS IAM instances.
@@ -78,7 +78,7 @@ The order of evaluation for Default Credentials Provider is the following:
  - Web Identity Token from AWS STS.
  - The shared credentials and config files.
  - Amazon ECS container credentials - loaded from the Amazon ECS if the environment variable `AWS_CONTAINER_CREDENTIALS_RELATIVE_URI` is set.
- - Amazon EC2 Instance profile credentials. 
+ - Amazon EC2 Instance profile credentials.
 
 You have also the possibility of using Profile Credentials Provider, by specifying the useProfileCredentialsProvider option to true and profileCredentialsName to the profile name.
 
