--- a/components/camel-aws/camel-aws2-kinesis/src/main/docs/aws2-kinesis-component.adoc
+++ b/components/camel-aws/camel-aws2-kinesis/src/main/docs/aws2-kinesis-component.adoc
@@ -1,5 +1,5 @@
 = AWS Kinesis Component
-:doctitle: AWS Kinesis
+:doctitle: Kinesis
 :shortname: aws2-kinesis
 :artifactid: camel-aws2-kinesis
 :description: Consume and produce records from and to AWS Kinesis Streams.
