--- a/components/camel-azure/camel-azure-servicebus/src/main/docs/azure-servicebus-component.adoc
+++ b/components/camel-azure/camel-azure-servicebus/src/main/docs/azure-servicebus-component.adoc
@@ -1,5 +1,5 @@
 = Azure ServiceBus Component
-:doctitle: Azure ServiceBus
+:doctitle: ServiceBus
 :shortname: azure-servicebus
 :artifactid: camel-azure-servicebus
 :description: Send and receive messages to/from Azure Service Bus.
