--- a/components/camel-azure/camel-azure-storage-datalake/src/main/docs/azure-storage-datalake-component.adoc
+++ b/components/camel-azure/camel-azure-storage-datalake/src/main/docs/azure-storage-datalake-component.adoc
@@ -1,5 +1,5 @@
 = Azure Storage Data Lake Service Component
-:doctitle: Azure Storage Data Lake Service
+:doctitle: Storage Data Lake Service
 :shortname: azure-storage-datalake
 :artifactid: camel-azure-storage-datalake
 :description: Sends and receives files to/from Azure Data Lake Storage.
