chore(docs): Remove Debezium prefix from doc titles

--- a/components/camel-debezium/camel-debezium-db2/src/main/docs/debezium-db2-component.adoc
+++ b/components/camel-debezium/camel-debezium-db2/src/main/docs/debezium-db2-component.adoc
@@ -1,5 +1,5 @@
 = Debezium DB2 Connector Component
-:doctitle: Debezium DB2 Connector
+:doctitle: DB2 Connector
 :shortname: debezium-db2
 :artifactid: camel-debezium-db2
 :description: Capture changes from a DB2 database.
