--- a/components/camel-debezium/camel-debezium-mongodb/src/main/docs/debezium-mongodb-component.adoc
+++ b/components/camel-debezium/camel-debezium-mongodb/src/main/docs/debezium-mongodb-component.adoc
@@ -1,5 +1,5 @@
 = Debezium MongoDB Connector Component
-:doctitle: Debezium MongoDB Connector
+:doctitle: MongoDB Connector
 :shortname: debezium-mongodb
 :artifactid: camel-debezium-mongodb
 :description: Capture changes from a MongoDB database.
