--- a/components/camel-debezium/camel-debezium-mysql/src/main/docs/debezium-mysql-component.adoc
+++ b/components/camel-debezium/camel-debezium-mysql/src/main/docs/debezium-mysql-component.adoc
@@ -1,5 +1,5 @@
 = Debezium MySQL Connector Component
-:doctitle: Debezium MySQL Connector
+:doctitle: MySQL Connector
 :shortname: debezium-mysql
 :artifactid: camel-debezium-mysql
 :description: Capture changes from a MySQL database.
