--- a/components/camel-debezium/camel-debezium-sqlserver/src/main/docs/debezium-sqlserver-component.adoc
+++ b/components/camel-debezium/camel-debezium-sqlserver/src/main/docs/debezium-sqlserver-component.adoc
@@ -1,5 +1,5 @@
 = Debezium SQL Server Connector Component
-:doctitle: Debezium SQL Server Connector
+:doctitle: SQL Server Connector
 :shortname: debezium-sqlserver
 :artifactid: camel-debezium-sqlserver
 :description: Capture changes from an SQL Server database.
