--- a/components/camel-debezium/camel-debezium-postgres/src/main/docs/debezium-postgres-component.adoc
+++ b/components/camel-debezium/camel-debezium-postgres/src/main/docs/debezium-postgres-component.adoc
@@ -1,5 +1,5 @@
 = Debezium PostgresSQL Connector Component
-:doctitle: Debezium PostgresSQL Connector
+:doctitle: PostgresSQL Connector
 :shortname: debezium-postgres
 :artifactid: camel-debezium-postgres
 :description: Capture changes from a PostgresSQL database.
