chore(docs): Remove Google prefix from doc titles

--- a/components/camel-google/camel-google-bigquery/src/main/docs/google-bigquery-component.adoc
+++ b/components/camel-google/camel-google-bigquery/src/main/docs/google-bigquery-component.adoc
@@ -1,5 +1,5 @@
 = Google BigQuery Component
-:doctitle: Google BigQuery
+:doctitle: BigQuery
 :shortname: google-bigquery
 :artifactid: camel-google-bigquery
 :description: Google BigQuery data warehouse for analytics.
