--- a/components/camel-google/camel-google-calendar/src/main/docs/google-calendar-component.adoc
+++ b/components/camel-google/camel-google-calendar/src/main/docs/google-calendar-component.adoc
@@ -1,5 +1,5 @@
 = Google Calendar Component
-:doctitle: Google Calendar
+:doctitle: Calendar
 :shortname: google-calendar
 :artifactid: camel-google-calendar
 :description: Perform various operations on a Google Calendar.
