--- a/components/camel-google/camel-google-calendar/src/main/docs/google-calendar-stream-component.adoc
+++ b/components/camel-google/camel-google-calendar/src/main/docs/google-calendar-stream-component.adoc
@@ -1,5 +1,5 @@
 = Google Calendar Stream Component
-:doctitle: Google Calendar Stream
+:doctitle: Calendar Stream
 :shortname: google-calendar-stream
 :artifactid: camel-google-calendar
 :description: Poll for changes in a Google Calendar.
