--- a/components/camel-google/camel-google-mail/src/main/docs/google-mail-component.adoc
+++ b/components/camel-google/camel-google-mail/src/main/docs/google-mail-component.adoc
@@ -1,5 +1,5 @@
 = Google Mail Component
-:doctitle: Google Mail
+:doctitle: Mail
 :shortname: google-mail
 :artifactid: camel-google-mail
 :description: Manage messages in Google Mail.
