--- a/components/camel-google/camel-google-secret-manager/src/main/docs/google-secret-manager-component.adoc
+++ b/components/camel-google/camel-google-secret-manager/src/main/docs/google-secret-manager-component.adoc
@@ -1,5 +1,5 @@
 = Google Secret Manager Component
-:doctitle: Google Secret Manager
+:doctitle: Secret Manager
 :shortname: google-secret-manager
 :artifactid: camel-google-secret-manager
 :description: Manage Google Secret Manager Secrets
