--- a/components/camel-google/camel-google-sheets/src/main/docs/google-sheets-component.adoc
+++ b/components/camel-google/camel-google-sheets/src/main/docs/google-sheets-component.adoc
@@ -1,5 +1,5 @@
 = Google Sheets Component
-:doctitle: Google Sheets
+:doctitle: Sheets
 :shortname: google-sheets
 :artifactid: camel-google-sheets
 :description: Manage spreadsheets in Google Sheets.
