--- a/components/camel-google/camel-google-pubsub-lite/src/main/docs/google-pubsub-lite-component.adoc
+++ b/components/camel-google/camel-google-pubsub-lite/src/main/docs/google-pubsub-lite-component.adoc
@@ -1,5 +1,5 @@
 = Google PubSub Lite Component (deprecated)
-:doctitle: Google PubSub Lite
+:doctitle: PubSub Lite
 :shortname: google-pubsub-lite
 :artifactid: camel-google-pubsub-lite
 :description: Send and receive messages to/from Google Cloud Platform PubSub Lite Service.
