--- a/components/camel-google/camel-google-pubsub/src/main/docs/google-pubsub-component.adoc
+++ b/components/camel-google/camel-google-pubsub/src/main/docs/google-pubsub-component.adoc
@@ -1,5 +1,5 @@
 = Google Pubsub Component
-:doctitle: Google Pubsub
+:doctitle: Pubsub
 :shortname: google-pubsub
 :artifactid: camel-google-pubsub
 :description: Send and receive messages to/from Google Cloud Platform PubSub Service.
